Add header styles

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -7,6 +7,15 @@ body {
 
 header h1 { display: none; }
 
+h1, h2, h3, h4, h5, h6 {
+	font-family: "Lucida Grande", "Lucida Sans Unicode", Geneva, sans-serif;
+}
+
+h2 {
+	font-weight: bold;
+	font-size: 1.5em;
+}
+
 .code {
 	font-family: "Monaco", monospace;
 }
