--- a/assets/styles.css
+++ b/assets/styles.css
@@ -7,6 +7,7 @@ body {
 	color: #222;
 	font: 19px "Georgia", serif;
 }
+header { margin-left: -90px; }
 header h1 { display: none; }
 h2 {
     margin-top: 1.2em;
@@ -18,6 +19,8 @@ p {
 }
 .content {
 	width: 640px;
+	margin-top: 1.8em;
+	margin-bottom: 2em;
 	margin-left: 11%;
 }
 .code-block {
