Make code block background colour darker
Increase contrast for improved readability.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -29,7 +29,7 @@ p {
     border: solid 2px #8c6e6e;
 	border-radius: 6px;
 	box-shadow: inset 1px 1px 10px #402929;
-	background-color: #483f3d;
+	background-color: #2d1f1c;
 	color: #c9ccb4;
 	text-shadow: 1px 3px 5px #230f0f;
 }
