Increase font size of subtitle

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -16,6 +16,9 @@ h2 {
 .font-size-0\.8 {
 	font-size: 0.8em;
 }
+.font-size-1\.52 {
+	font-size: 1.52em;
+}
 a:link { color: #b71863; }
 a:hover { color: #880442; }
 body {
