--- a/assets/stylesheets/typography.css
+++ b/assets/stylesheets/typography.css
@@ -19,3 +19,11 @@ h2 {
 .font-size-1\.52 {
 	font-size: 1.52em;
 }
+
+.font-size-15 {
+	font-size: 15em;
+}
+
+.text-center {
+	text-align: center;
+}
