Style "Buy" button
* Move Lucida Grande font stack to a variable
* Add buttons styles for a magenta gradiented button

--- a/assets/stylesheets/typography.css
+++ b/assets/stylesheets/typography.css
@@ -1,5 +1,7 @@
+set(LUCIDA_GRANDE, `"Lucida Grande", "Lucida Sans Unicode", Geneva, sans-serif')
+
 h1, h2, h3, h4, h5, h6 {
-	font-family: "Lucida Grande", "Lucida Sans Unicode", Geneva, sans-serif;
+	font-family: LUCIDA_GRANDE;
 }
 
 h2 {
