--- a/assets/styles.css
+++ b/assets/styles.css
@@ -27,8 +27,10 @@ h2 {
 }
 a:link { color: #b71863; }
 a:hover { color: #880442; }
-a.button {
+.button {
 	padding: 13px 15px;
+}
+a.button {
 	border: 1px solid;
 	border-radius: 10px;
 	font-family: "Lucida Grande", "Lucida Sans Unicode", Geneva, sans-serif;
@@ -86,6 +88,39 @@ p {
 ul {
 	list-style: disc;
 }
+.display-inline-block {
+	display: inline-block;
+}
+.position-relative {
+	position: relative;
+}
+.position-absolute {
+	position: absolute;
+}
+.right-0 {
+	right: 0;
+}
+.bottom-0 {
+	bottom: 0;
+}
+.margin-top-0\.5 {
+	margin-top: 0.5em;
+}
+.margin-bottom-0\.5 {
+	margin-bottom: 0.5em;
+}
+.margin-bottom-0\.63 {
+	margin-bottom: 0.63em;
+}
+.margin-bottom-1\.8 {
+	margin-bottom: 1.8em;
+}
+.padding-top-9 {
+	padding-top: 9px;
+}
+.padding-bottom-9 {
+	padding-bottom: 9px;
+}
 .content {
 	width: 640px;
 	margin-top: 1.8em;
@@ -101,13 +136,4 @@ ul {
 	background-color: #2d1f1c;
 	color: #c9ccb4;
 	text-shadow: 1px 3px 5px #230f0f;
-}
-.margin-top-0\.5 {
-	margin-top: 0.5em;
-}
-.margin-bottom-0\.63 {
-	margin-bottom: 0.63em;
-}
-.margin-bottom-1\.8 {
-	margin-bottom: 1.8em;
 }
