--- a/assets/styles.css
+++ b/assets/styles.css
@@ -8,6 +8,7 @@ h1, h2, h3, h4, h5, h6 {
 h2 {
 	font-weight: bold;
 	font-size: 1.5em;
+	color: #4e0303;
 }
 .code {
 	font-family: "Monaco", monospace;
