--- a/assets/styles.css
+++ b/assets/styles.css
@@ -23,6 +23,10 @@ h2 {
 .font-size-1\.52 {
 	font-size: 1.52em;
 }
+.font-size-2\.5 {
+	font-size: 2.5em;
+	line-height: 1.25em;
+}
 .font-size-15 {
 	font-size: 15em;
 }
@@ -33,13 +37,15 @@ a:link { color: #b71863; }
 a:hover { color: #880442; }
 .button {
 	padding: 13px 15px;
-}
-a.button {
 	border: 1px solid;
 	border-radius: 10px;
 	font-family: "Lucida Grande", "Lucida Sans Unicode", Geneva, sans-serif;
+	font-size: inherit;
+}
+a.button {
 	text-decoration: none;
 }
+.button-magenta,
 a.button-magenta {
 	border-color: #790d52;
 	box-shadow: 0 3px 13px -3px #2b041c;
@@ -52,6 +58,7 @@ a.button-magenta {
 	color: #ffd7d7;
 	text-shadow: 0px -1px 1px #161c1f;
 }
+.button-magenta:hover,
 a.button-magenta:hover {
 	border-color: #9e0e6a;
 	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ff1ea5+0,dd1c83+100 */
@@ -62,6 +69,7 @@ a.button-magenta:hover {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff1ea5', endColorstr='#dd1c83',GradientType=0 ); /* IE6-9 */
 	color: #ffe1e1;
 }
+.button-magenta:active,
 a.button-magenta:active {
 	border-color: #4c0833;
 	box-shadow: 0 3px 13px -2px #2b041c;
@@ -92,6 +100,9 @@ p {
 ul {
 	list-style: disc;
 }
+.display-block {
+	display: block;
+}
 .display-inline-block {
 	display: inline-block;
 }
@@ -110,6 +121,12 @@ ul {
 .margin-top-0\.5 {
 	margin-top: 0.5em;
 }
+.margin-top-2 {
+	margin-top: 2em;
+}
+.margin-right-auto {
+	margin-right: auto;
+}
 .margin-bottom-0\.5 {
 	margin-bottom: 0.5em;
 }
@@ -118,6 +135,12 @@ ul {
 }
 .margin-bottom-1\.8 {
 	margin-bottom: 1.8em;
+}
+.margin-bottom-2 {
+	margin-bottom: 2em;
+}
+.margin-left-auto {
+	margin-left: auto;
 }
 .padding-top-9 {
 	padding-top: 9px;
