--- a/assets/stylesheets/typography.css
+++ b/assets/stylesheets/typography.css
@@ -24,6 +24,11 @@ h2 {
 	font-size: 1.52em;
 }
 
+.font-size-2\.5 {
+	font-size: 2.5em;
+	line-height: 1.25em;
+}
+
 .font-size-15 {
 	font-size: 15em;
 }
