index.html: Add demo video
Not committing the video files. They're only 3 & 4 megabytes each, but
that still seems a bit too much to keep in version control.

Add the video to the home page and center it in the content area. We
give it a negative margin to center it since it's wider than the
container.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -142,6 +142,9 @@ ul {
 .margin-left-auto {
 	margin-left: auto;
 }
+.margin-left-neg-12\.5\% {
+	margin-left: -12.5%;
+}
 .padding-top-9 {
 	padding-top: 9px;
 }
