--- a/assets/styles.css
+++ b/assets/styles.css
@@ -167,6 +167,12 @@ ul {
 	color: #c9ccb4;
 	text-shadow: 1px 3px 5px #230f0f;
 }
+@media screen and (max-width: 870px) {
+	.content video {
+		width: 100%;
+		margin-left: 0;
+	}
+}
 @media screen and (max-width: 767px) {
 	header {
 		margin-left: -8px;
