--- a/assets/stylesheets/typography.css
+++ b/assets/stylesheets/typography.css
@@ -16,6 +16,11 @@ h2 {
     line-height: 1.6em;
 }
 
+.shell-command:before {
+	content: '$ ';
+	color: MURKY_POND;
+}
+
 .font-size-0\.8 {
 	font-size: 0.8em;
 }
